samples/_failures_safe/1761420493_b9ec22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb3523af.c: In function ‘main’:
./samples/SAFE/__tmp_eb3523af.c:142:5: error: expected expression at end of input
  142 |     if (!add_block(&ctx, test_data1, sizeof(test_data1) -
      |     ^~
./samples/SAFE/__tmp_eb3523af.c:142:5: error: expected declaration or statement at end of input
